koi/adm/deploy-adm.yml
apiVersion: v1
kind: Service
metadata:
  name: adm-frontend-service-koidemo
  namespace: tnt
  labels:
    app: adm-frontend-koidemo
    service: adm-frontend-koidemo
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: adm-frontend-koidemo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adm-frontend-app-koidemo
  namespace: tnt
  labels:
    app: adm-frontend-koidemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adm-frontend-koidemo
  template:
    metadata:
      labels:
        app: adm-frontend-koidemo
    spec:
      containers:
      - name: adm-frontend-app-koidemo
        image: de.icr.io/airc-registry/adm-frontend:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      imagePullSecrets:
        -  name: tnt-de-icr-io
---

apiVersion: v1
kind: Service
metadata:
  name: adm-backend-service-koidemo
  namespace: tnt
  labels:
    app: adm-backend-koidemo
    service: adm-backend-koidemo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: adm-backend-koidemo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adm-backend-app-koidemo
  namespace: tnt
  labels:
    app: adm-backend-koidemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adm-backend-koidemo
  template:
    metadata:
      labels:
        app: adm-backend-koidemo
    spec:
      containers:
      - env:
        - name: ALFRESCO_APP
          value: DEMO/ADM
        - name: ALFRESCO_PASSWORD
          value: admin
        - name: ALFRESCO_URL
          value: http://29a53d09-eu-de.lb.appdomain.cloud
        - name: ALFRESCO_USERNAME
          value: admin
        - name: DATABASE_PASSWORD
          value: adm
        - name: DATABASE_URL
          value: jdbc:postgresql://pg-ha-postgresql-ha-pgpool.database.svc.cluster.local:5432/adm?connectTimeout=60
        - name: DATABASE_USERNAME
          value: adm
        - name: FLYWAY_BASELINE_ON_MIGRATE
          value: "false"
        - name: KEYCLOAK_PASSWORD
          value: admin
        - name: KEYCLOAK_REALM
          value: erp-airc-saas
        - name: KEYCLOAK_URL
          value: http://29a53d09-eu-de.lb.appdomain.cloud
        - name: KEYCLOAK_USER
          value: admin
        - name: LOG_LEVEL
          value: INFO
        - name: MAX_USERS_TENANT
          value: "200"
        - name: TNT_URL
          value: http://29a53d09-eu-de.lb.appdomain.cloud
        name: adm-backend-app
        image: de.icr.io/airc-registry/adm-backend:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
        -  name: tnt-de-icr-io
